<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.text.TextUtils"/>

        <variable
            name="pet"
            type="com.rorpheeyah.realmhelper.pet.Pet" />

        <variable
            name="owner"
            type="com.rorpheeyah.realmhelper.pet.User" />

        <variable
            name="viewmodel"
            type="com.rorpheeyah.realmhelper.detail.PetDetailVM" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_F4F7FD"
            tools:context=".detail.PetDetailActivity">

            <FrameLayout
                android:id="@+id/rl_toolbar"
                android:background="@color/color_F4F7FD"
                android:layout_width="match_parent"
                android:layout_height="346dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    app:setImageLoading="@{null}"
                    android:scaleType="centerCrop"
                    tools:ignore="ContentDescription" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_profile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:setImageUrl="@{pet.imgUrl}"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center"
                    tools:background="@mipmap/ic_launcher"
                    tools:ignore="ContentDescription" />
            </FrameLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_toolbar"
                android:layout_marginBottom="?actionBarSize"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="?actionBarSize">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@{pet.name}"
                        android:textColor="@color/color_1E3054"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        tools:text="Parkinson" />

                    <TextView
                        android:id="@+id/tv_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@{pet.gender ? @drawable/style_radius_20_red : @drawable/style_radius_20_blue}"
                        android:text='@{pet.gender ? "Female" : "Male"}'
                        android:textColor="@{pet.gender ? @color/color_EB5757 : @color/color_006AF6}"
                        android:textSize="12sp"
                        tools:background="@drawable/style_radius_20_blue"
                        tools:text="Male" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <TextView
                    android:id="@+id/tv_behavior"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:textColor="@color/color_1E3054"
                    android:textSize="12sp"
                    app:behavior="@{pet.behavior}"
                    app:dob="@{pet.dob}"
                    tools:text="2 yrs | Playful" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-5dp"
                    android:layout_marginTop="9dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="6dp"
                        android:src="@drawable/ic_location" />

                    <TextView
                        android:id="@+id/tv_distance"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:textColor="@color/color_1E3054"
                        android:textSize="12sp"
                        app:distance="@{pet.distance}"
                        tools:text="381m away" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <TextView
                    android:id="@+id/created_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:textColor="@color/color_1E3054"
                    android:textSize="12sp"
                    app:timeAgo="@{pet.createdDate}"
                    tools:text="12 min ago" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="37dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/my_story"
                    android:textColor="@color/color_1E3054"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:lineSpacingExtra="3dp"
                    android:text="@{TextUtils.isEmpty(pet.story) ? @string/no_story : pet.story}"
                    android:textColor="@color/color_1E3054"
                    android:textSize="14sp"
                    tools:text="@string/content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="37dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/quick_info"
                    android:textColor="@color/color_1E3054"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="95dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/style_radius_12_dddddd"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="12dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"
                            android:gravity="center"
                            android:textColor="@color/color_1E3054"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            app:age="@{pet.dob}"
                            tools:text="1.4 yrs" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/age"
                            android:textColor="@color/color_828282"
                            android:textSize="12sp" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <View
                        android:layout_width="24dp"
                        android:layout_height="wrap_content" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="95dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/style_radius_12_dddddd"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="12dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"
                            android:gravity="center"
                            android:text="@{pet.color}"
                            android:textColor="@color/color_1E3054"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            tools:text="Brown" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/color"
                            android:textColor="@color/color_828282"
                            android:textSize="12sp" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <View
                        android:layout_width="24dp"
                        android:layout_height="wrap_content" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="95dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/style_radius_12_dddddd"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="12dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"
                            android:gravity="center"
                            android:textColor="@color/color_1E3054"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            app:weight="@{pet.weight}"
                            tools:text="2 kg" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/weight"
                            android:textColor="@color/color_828282"
                            android:textSize="12sp" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="37dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/owner_info"
                    android:textColor="@color/color_1E3054"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:scaleType="centerCrop"
                        android:shadowRadius="40"
                        app:setImageUrl="@{owner.imgUrl}"
                        app:shapeAppearance="@style/ShapeAppearance.ImageView"
                        tools:background="@drawable/ic_launcher_background" />

                    <View
                        android:layout_width="16dp"
                        android:layout_height="wrap_content" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:text="@{owner.name}"
                            android:textColor="@color/color_1E3054"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            tools:text="David Berlin" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{owner.occupation}"
                            android:textColor="@color/color_1E3054"
                            android:textSize="12sp"
                            tools:text="Socialist and Developer" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_white_chat"
                        app:tint="@color/white"
                        tools:ignore="ContentDescription" />
                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </RelativeLayout>
    </ScrollView>
</layout>